AC_PREREQ([2.72])
AC_INIT([fest], [2.1], [https://github.com/cygishere/fest/issues])
AC_CONFIG_SRCDIR([src/fest.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AM_INIT_AUTOMAKE([subdir-objects])

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADER_STDBOOL

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_FUNC_REALLOC
AC_CHECK_FUNCS([strerror strtol])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

